@@ -39,6 +39,8 @@ MISCELLANEOUS
 * Simplified the naming of the similarity indices. For example, `jaccard_indep()`
   is now `jaccard()`, and `rand_indep()` is now `rand()`.
 
+* Minor bug fixes in `clustomit()`.
+
 clusteval 0.1
 -------------
 
